--- a/StockTrader/composer.json
+++ b/StockTrader/composer.json
@@ -11,7 +11,8 @@
         "guzzlehttp/guzzle": "^6.2",
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+      "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
